<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cilindro">

    <ImageView
        android:id="@+id/ivVentanaCilindro"
        style="@style/fotos"
        android:layout_marginTop="@dimen/toTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cilindro" />

    <TextView
        android:id="@+id/lblResultadoCilindro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/entreComponenetesH"
        android:textSize="@dimen/letraExtra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlturaCilindro" />

    <Button
        android:id="@+id/btnCalcularCilindro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/toBotton"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtRadioCilindro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/entreComponenetesV"
        android:ems="10"
        android:hint="@string/radio"
        android:inputType="numberDecimal"
        android:textSize="@dimen/letraNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivVentanaCilindro" />

    <EditText
        android:id="@+id/txtAlturaCilindro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/entreComponenetesH"
        android:ems="10"
        android:hint="@string/altura"
        android:inputType="numberDecimal"
        android:textSize="@dimen/letraNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRadioCilindro" />

</androidx.constraintlayout.widget.ConstraintLayout>